--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,18 @@
             <version>3.8.1</version>
         </dependency>
 
+        <!-- Start for benchmarks-->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.37</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.37</version>
+        </dependency>
+        <!-- End for benchmarks-->
     </dependencies>
 
 
