--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>1.37</version>
         </dependency>
         <!-- End for benchmarks-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.7.7</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
